--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="top_to_change_phone_number">Top to change phone number</string>
     <string name="accountText">Account</string>
     <string name="settings">Settings</string>
+    <string name="bioText">Believe you can and you\'re halfway there ...The chance</string>
+    <string name="bio">Bio</string>
 </resources>
